# tracking_despesas

./: .gitignore  AGENTS.md  Makefile  Orcamento_Robusto_Preenchido.xlsx  Orcamento_Robusto_Template.xlsx  Orçamento mensal.xlsx  README.md  WORKBOOK_DESIGN.md  api.py  expense_cli.py  expenses.db.bak_2026-02-24_0323  expenses.db.bak_assinaturas_migration  expenses.db.bak_pre_assinaturas_migrate  pyproject.toml  tracking_despesas_server.py
checkpoints/: index.jsonl
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
nubank_csv_attachments_last24h/: .message_ids.txt  2026-02-23_12-17-37__Extrato da sua conta do Nubank__19c8b13d77410e55__NU_133504378_01FEV2026_22FEV2026.csv  2026-02-23_12-20-06__Extrato da fatura do Cartão Nubank__19c8b161aaa916a1__Nubank_2026-03-10.csv  2026-02-23_12-21-36__Extrato da fatura do Cartão Nubank__19c8b177d2c16520__Nubank_2026-02-10.csv  2026-02-23_12-22-04__Seu extrato da conta Nu Empresas__19c8b17eb8960648__NU_3517837493_01FEV2026_22FEV2026.csv  2026-02-23_12-22-19__Extrato da fatura do Cartão Nubank__19c8b181df0b76f9__Nubank_2026-03-10.csv  2026-02-23_12-22-31__Extrato da fatura do Cartão Nubank__19c8b185102a8fd7__Nubank_2026-02-10.csv  combined_transactions_deduped.csv  combined_transactions_deduped_keep_categorized.csv  combined_transactions_keep_only.csv  summary.txt
screenshots/: sweep_report.txt
scripts/: app_endpoint.py  curate_transactions_csv.py  generate_workbooks.py  migrate_assinaturas.py
tests/: test_inbox_category_updates.py  test_inbox_ingest_idempotency.py  (+1 more)
(+45 files in other folders)
