[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tracking-despesas"
version = "0.1.0"
description = "CLI + Dashboard for personal expense tracking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.131.0",
    "uvicorn>=0.41.0",
]

[project.scripts]
tracking-despesas = "expense_cli:main"
tracking-despesas-api = "tracking_despesas_server:main"

[tool.setuptools]
py-modules = ["expense_cli", "api", "tracking_despesas_server"]

[tool.uv]
dev-dependencies = []
